style.css
*{
    margin: 0px;
    font-family: Arial;
    border: border-box;
}

.navbar{
    height: 60px;
    background-color: #0f1111;
    color: white;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.nav-logo{
    height: 50px;
    width: 120px;
    margin-left: 10px;
    display: flex;
    align-items: center;
}

.logo{
    background-image: url("amazon-logo.png");
    background-size: contain;
    background-repeat: no-repeat;
    height: 80%;
    width: 100%;
    object-fit: contain;
}

.border{
    border: 1.5px solid transparent;
}

.border:hover{
    border: 1.5px solid white;
}

/*box-2*/
.address-first{
    color: #cccccc;
    font-size: 0.85rem;
    margin-left: 19px;

}

.address-second{
    font-size: 1rem;
    margin-left: 3px;

}

.add-icon{
    display: flex;
    align-items: center;
}

/*box-3*/
.nav-search{
    display: flex;
    background-color: pink;
    width: 620px;
    height: 40px;
    border-radius: 4px;
}

.search-select{
    background-color: #f3f3f3;
    width: 50px;
    text-align: center;
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
    border: none;
}

.search-input{
    width: 100%;
    font-size: 1rem;
    border: none;
}

.search-icon{
    width: 45px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    background-color: #febd68;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    color:#0f1111;

}

.nav-search:hover {
    border: 2px solid orange;
}

/*box-4*/
span{
    font-size: 0.7rem;
}

.nav-second{
    font-size: 0.85rem;
    font-weight: 700;
}

/** box6 **/
.nav-cart i{
    font-size: 30px;
}

.nav-cart{
    font-size: 0.85rem;
    font-weight: 700;
}

/** panel **/
.panel{
    height: 40px;
    background-color: #222f3d;
    display: flex;
    color: white;
    align-items: center;
    justify-content: space-evenly;
}

.panel-ops p{
    display: inline;
    margin-left: 15px;
}

.panel-ops{
    width: 70%;
    font-size: 0.85rem;
}

.panel-deals{
    font-size: 0.9rem;
    font-weight: 700;
}

/** hero-section **/
.hero-section{
    background-image: url("hero-img.jpg");
    background-size: cover;
    height: 400px;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.hero-mssg{
    background-color: white;
    color: black;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 0.85rem;
    width: 80%;
    margin-bottom: 107px;

}

.hero-mssg a{
  color: #007185;
}

/** box section **/ 
.box{
   /** border: 2px solid black **/
}

/** shop section **/
.shop-section{
    display: flex;
    justify-content: space-evenly;
    background-color: #e2e7e6;
}

.box{
    height: 400px;
    width: 23%;
    background-color: white;
    padding: 20px 0px 15px;
    margin-top: 15px;
}

.box-img{
    height: 300px;
    background-size: cover;
    margin-top: 1rem;
    margin-bottom: 1rem;

}

.box-content{
    margin-left: 1rem;
    margin-right: 1rem;
}

.box-content p{
    color: #007185;
}

/** foot panel **/
footer{
    margin-top: 15px;

}

.foot-panel1{
    background-color: #37475a;
    color: white;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 0.85rem;
}

.foot-panel2{
    background-color: #222f3d;
    color: white;
    height: 300px;
    display: flex;
    justify-content: space-evenly;
}

ul{
    margin-top: 20px;
}

ul a{
    display: block;
    font-size: 0.85rem;
    margin-top: 10px;
    color: #dddddd;
}

.foot-panel3{
    background-color: #222f3d;
    color: white;
    border-top: 0.5px solid white;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo{
    background-image: url('amazon-logo.png');
    background-size: contain;
    background-repeat: no-repeat;
    height: 50px;
    width: 100px;
    object-fit: contain;
    margin-top: 15px
}

.foot-panel4{
    background-color: #0f1111;
    color: white;
    height: 80px;
    font-size: 0.7rem;
    text-align: center;
   /** display: flex;
    justify-content: center;
    align-items: center; **/
}

.pages{
    padding-top: 25px;
}

.copyright{
    padding-top: 5px;
}

.box3 {
  background-color: white;
  padding: 18px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.box3 h2 {
  font-size: 25px;
  font-weight: 700;
  margin-bottom: 15px;
}

.box3-content {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 18px;
}

.box3-item {
  display: flex;
  flex-direction: column;
}

.box3-img {
  width: 100%;
  height: 120px;
  background-size: cover;
  background-position: center;
}

.box3-item p {
  font-size: 12px;
  margin-top: 6px;
}

.box3-link {
  display: inline-block;
  margin-top: 10px;
  font-size: 15px;
  color: #007185; 
  text-decoration: none;
}

/* images */
.img1 { background-image: url("box3.1-img.jpg"); }
.img2 { background-image: url("box3.2-img.jpg"); }
.img3 { background-image: url("box3.3-img.jpg"); }
.img4 { background-image: url("box3.4-img.jpg"); }

/** box4 **/
.box4 {
  background-color: white;
  padding: 18px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.box4 h2 {
  font-size: 25px;
  font-weight: 700;
  margin-bottom: 15px;
}

.box4-content {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 18px;
}

.box4-item {
  display: flex;
  flex-direction: column;
}

.box4-img {
  width: 100%;
  height: 120px;
  background-size: cover;
  background-position: center;
}

.box4-item p {
  font-size: 12px;
  margin-top: 6px;
}

.box4-link {
  display: inline-block;
  margin-top: 10px;
  font-size: 15px;
  color: #007185; 
  text-decoration: none;
}

/* images */
.img5 { background-image: url("box4.1-img.jpg"); }
.img6 { background-image: url("box4.2-img.jpg"); }
.img7 { background-image: url("box4.3-img.jpg"); }
.img8 { background-image: url("box4.4-img.jpg"); }

/* Make website responsive */

@media (max-width: 480px) {
 .navbar{
    flex-wrap: wrap;
    height: auto;
 }

 .nav-search{
    width: 100%;
    margin-top: 10px;
 }

 .nav-address, .nav-sigin, .nav-return{
    display: none;
 }

 .nav-cart{
    margin-left: auto;
 }
  
 .panel{
    flex-wrap: wrap;
    height: auto;
 }

 .panel-ops{
    width: 100%;
    margin-top: 5px;
 }

 .panel-ops p{
    display: block;
    margin: 5px 0;
 }


 .hero-section{
    height: 200px;
 }

 .hero-mssg{
    width: 90%;
    font-size: 0.7rem;
    margin-bottom: 20px;
 }

 .shop-section{
    flex-direction: column;
    align-items: center;
 }

 .box{
    width: 90%;
 }

 .foot-panel2{
    flex-direction: column;
    height: auto;
    align-items: center;
    text-align: center;
 }
}

@media (max-width: 1024px){

    .nav-search{
        width: 500px;
    }

    .box{
        width: 48%;
    }
}

@media (max-width: 768px) {

    .navbar{
        flex-wrap: wrap;
        height: auto;
    }

    .nav-search{
        width: 90%;
        margin-top: 10px;
    }

    .panel-ops{
        width: 100%;
        text-align: center;
    }

    .shop-section{
        flex-wrap: wrap;
    }

    .box{
        width: 45%;
        margin-bottom: 15px;
    }

    .hero-section{
        height: 250px;
    }
}

